Fix pill wrapping issue

--- a/interface/components/pills/index.styl
+++ b/interface/components/pills/index.styl
@@ -22,6 +22,7 @@ tf-pills
     transition 300ms
     cursor pointer
     user-select none
+    display inline-block
 
     &:hover
       box-shadow 0 0 0 2px green
